--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services: 
   - type: web
     name: traductor_api
+    env: python
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host=0.0.0.0 --port=10000
+    startCommand: uvicorn app.main:app --host=0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10.13
+        value: 3.9.18
