--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,3 @@
-Vamos a tomar tu código actual y solo quitar la parte visual manteniendo toda tu lógica intacta.
-
-
-API Simplificada - main.py
-Código 
-
-Lógica de Señas Sin UI - sign_logic.py
-Código 
-
-requirements.txt simplificado
-Código 
-✅ Listo! Estructura Super Simple
-He tomado exactamente tu código y solo:
-
-🔄 Lo que mantuve IGUAL:
-✅ Tu lógica de MOVEMENT_THRESHOLD, STATIC_FRAMES_REQUIRED, etc.
-✅ Tu función evaluate_hybrid_simple() completa
-✅ Todas tus funciones auxiliares (calculate_movement, extract_hand_keypoints, etc.)
-✅ Tu lógica de manos quietas = ESTÁTICA, manos salen = DINÁMICA
-✅ Tus thresholds de confianza (0.8 para estática, 0.7 para dinámica)
-🚫 Lo que quité:
-❌ cv2.imshow() - No mostrar ventana
-❌ cv2.rectangle() - No dibujar UI
-❌ cv2.putText() - No mostrar texto en pantalla
-❌ cv2.waitKey() - No esperar teclas
-❌ Loop de video - Ahora procesa frame por frame
-📁 Archivos necesarios:
-tu-proyecto/
-├── main.py              # API FastAPI
-├── sign_logic.py        # Tu lógica SIN UI
-├── requirements.txt     # Dependencias mínimas
-├── helpers.py          # Tu archivo original
-├── constants.py        # Tu archivo original
-├── models/             # Tus modelos .h5
-└── data/               # Tus JSONs
-🔌 Cómo funciona:
-App móvil envía frame en base64
-API llama a processor.process_single_frame(frame)
-Tu lógica original procesa el frame
-API devuelve palabra detectada (si la hay)
-🎯 Para usar:
-bash
-# Instalar dependencias
-pip install -r requirements.txt
-
-# Ejecutar API
-uvicorn main:app --host 0.0.0.0 --port 8000
-¿Es esto lo que querías? Tu lógica intacta pero sin ventanas, para conectar con la app móvil.
-
-
-
-
-
-de algun modo asi... pero si es necesario eso de la class quiero que quede lo mas sencillo ya que soy estudiante y como lo reorganisaste no lo entiendo por eso de algun modo quiero la estrutura original pero sin lo visual de visual studio ya que solo debe retornar o mandar la palabra para que se lea en la aplicacion la cual se va a realizar con react native
-
-¡Perfecto! Te entiendo completamente. Vamos a mantener tu estructura original EXACTA, solo quitando lo visual. Nada de clases complicadas.
-
-
-main.py - API Super Simple
-Código 
-
-sign_logic.py - Tu código original SIN lo visual
-Código 
-✅ ¡Listo! Súper Simple
-📁 Solo necesitas 3 archivos:
-├── main.py           # API básica
-├── sign_logic.py     # Tu código SIN lo visual  
-└── requirements.txt  # Dependencias
-🔄 Lo que hice:
-✅ MANTUVE EXACTO:
-
-Tu función evaluate_hybrid_simple() completa
-Todas tus variables globales (sentence, kp_sequence, etc.)
-Tu lógica de manos quietas = ESTÁTICA, manos salen = DINÁMICA
-Tus thresholds (0.8, 0.7)
-Todas tus funciones auxiliares
-❌ SOLO QUITÉ:
-
-cv2.imshow() - Mostrar ventana
-cv2.putText() - Texto en pantalla
-cv2.rectangle() - Colores de fondo
-cv2.waitKey() - Esperar teclas
-El loop while video.isOpened()
-🎯 Cómo funciona:
-React Native toma foto/frame
-Lo envía en base64 a /process_frame/{session_id}
-Tu función process_frame_simple(frame) lo procesa
-API devuelve {"word": "hola", "confidence": 0.95, "type": "static"}
-React Native muestra la palabra
-📱 Para React Native:
-javascript
-// Enviar frame a tu API
-const sendFrame = async (frameBase64) => {
-  const response = await fetch(`${API_URL}/process_frame/${sessionId}`, {
-    method: 'POST',
-    headers: {'Content-Type': 'application/json'},
-    body: JSON.stringify({frame_base64: frameBase64})
-  });
-  
-  const result = await response.json();
-  if (result.word) {
-    console.log(`Detectado: ${result.word} (${result.confidence}%)`);
-    // Mostrar en tu app
-  }
-};
-🚀 Para ejecutar:
-bash
-pip install -r requirements.txt
-uvicorn main:app --host 0.0.0.0 --port 8000
-¿Es esto lo que querías? Tu estructura original intacta, solo sin ventanas.
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 opencv-python-headless==4.8.1.78
@@ -116,5 +6,4 @@ tensorflow==2.14.0
 keras==2.14.0
 numpy==1.24.3
 pydantic==2.4.2
-
-
+python-multipart==0.0.6
