--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,13 @@
-services: 
+services:
   - type: web
-    name: traductor_api
+    name: traductor-api
     env: python
-    runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host=0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT --timeout-keep-alive 60
+    healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.18
+        value: 3.10.13
+    scaling:
+      minInstances: 1
+      maxInstances: 1
