--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-opencv-python-headless==4.8.1.78
-mediapipe==0.10.11
-tensorflow==2.10.1
-numpy==1.24.3
-pydantic==2.4.2
-python-multipart==0.0.6
-pandas==2.0.3
+fastapi
+uvicorn[standard]
+opencv-python-headless
+mediapipe
+tensorflow
+numpy
+pydantic
+python-multipart
+pandas
+protobuf
